<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_label" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/toppings_label" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/whipped_cream"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="6dp"
                    android:text="@string/whipped_cream_label"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/chocolate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="6dp"
                    android:text="@string/chocolate_label"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/quantity_label" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/butPlus"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="#A9ABFF"
                    android:onClick="submitMinus"
                    android:text="@string/minus_label"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/begin_number"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/butMinus"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="16dp"
                    android:background="#A9ABFF"
                    android:onClick="submitPlus"
                    android:paddingStart="10dp"
                    android:text="@string/plus_label" />
            </LinearLayout>

            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/order_summary_label" />

            <TextView
                android:id="@+id/order_summary_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/begin_price"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="submitInfo"
                    android:text="@string/info_label"
                    android:textSize="30sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="submitOrder"
                    android:text="@string/order_label"
                    android:textSize="30sp"
                    android:layout_marginStart="15dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>